SemanticAnalyzer/tests/success/clase_herencia.java

class A extends Objeto {

    static boolean methodb1(Objeto o1, Objeto o2)
    var Objeto o3, o4;
		var String s1 , s2;

    {
    }
    dynamic

    int methodi1()
    var int n;

    {
        n = getN(3);
        return n;
    }
}

class Objeto {

    var int n;
    var boolean b;

    static void main() {
    }
    dynamic

    int getN(int v) {
        n = v;
        return n;
    }
}
